--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div>
+        <h1>Pronóstico del Clima</h1>
+
+        <form id="forecast-form">
+            <div>
+                <input type="text" id="city-input" placeholder="Ingresa una ciudad">
+                <button type="submit">Buscar</button>
+            </div>
+        </form>
+
+        <div id="forecast-result" class="d-none">
+            <h3 id="forecast-city"></h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Fecha y Hora</th>
+                        <th>Temperatura °C</th>
+                        <th>Descripción</th>
+                        <th>Humedad %</th>
+                    </tr>
+                </thead>
+                <tbody id="forecast-table-body"></tbody>
+            </table>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
