--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clima App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="bg-light">
     <div class="container my-5">
-        <h1 class="text-center mb-4">Pronostico del Clima</h1>
+        <div class="d-flex align-items-center justify-content-between mb-4">
+            <h1 class="mb-0">Pronóstico del Clima</h1>
+            <button id="dark-mode-toggle" class="btn btn-dark">🌙 Modo Oscuro</button>
+        </div>
 
         <form id="forecast-form" class="mb-4">
             <div class="input-group">
                 <input type="text" id="city-input" class="form-control" placeholder="Ingresa una ciudad">
                 <button type="submit" class="btn btn-primary">Buscar</button>
+                <button type="reset" class="btn btn-secondary" id="clear-button">Limpiar</button>
             </div>
         </form>
 
@@ -23,9 +29,9 @@
                 <thead>
                     <tr>
                         <th>Fecha y Hora</th>
-                        <th>Temperatura °C</th>
+                        <th>Temperatura</th>
                         <th>Descripcion</th>
-                        <th>Humedad %</th>
+                        <th>Humedad</th>
                     </tr>
                 </thead>
                 <tbody id="forecast-table-body"></tbody>
@@ -35,4 +41,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
