Idioma de las descripciones cambiado a español y agregado comentarios para mejor comprension del codigo

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,14 @@
 
 <body class="bg-light">
     <div class="container my-5">
+
+        <!--Titulo y Dark mode-->
         <div class="d-flex align-items-center justify-content-between mb-4">
             <h1 class="mb-0">Pronóstico del Clima</h1>
             <button id="dark-mode-toggle" class="btn btn-dark">🌙 Modo Oscuro</button>
         </div>
 
+        <!--Formulario-->
         <form id="forecast-form" class="mb-4">
             <div class="input-group">
                 <input type="text" id="city-input" class="form-control" placeholder="Ingresa una ciudad">
@@ -23,6 +26,7 @@
             </div>
         </form>
 
+        <!--Formulario-->
         <div id="forecast-result" class="d-none">
             <h3 id="forecast-city" class="text-center mb-3"></h3>
             <table class="table table-striped">
